tests/fixtures/invalid/str_div_set.py
# Cannot divide Str and Set[int]
x: float = "hello" / {1, 2, 3}
